--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
     "react": "^16.0.0",
+    "react-countdown-clock": "^2.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14",
     "reactstrap": "^5.0.0-alpha.3"
